move "model" package
move "model" into "defective_cell_detection"
rename "result_analysis" as "metric_analysis"
cancel "classifier" subfolder in the "model" folder.

--- a/tutorials/resnet_train_inference.ipynb
+++ b/tutorials/resnet_train_inference.ipynb
@@ -20,7 +20,7 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "import pickle\n",
     "\n",
-    "import pv_vision.model.classifier.cnn_train_val as cnn"
+    "import pv_vision.defective_cell_detection.model.cnn_train_val as cnn"
    ],
    "outputs": [],
    "metadata": {
