--- a/tutorials/rf_train_inference.ipynb
+++ b/tutorials/rf_train_inference.ipynb
@@ -13,7 +13,7 @@
     "from tqdm import tqdm\n",
     "import joblib\n",
     "\n",
-    "import pv_vision.model.classifier.rf_train_val as rf_tool"
+    "import pv_vision.defective_cell_detection.model.rf_train_val as rf_tool"
    ],
    "outputs": [],
    "metadata": {}
@@ -156,7 +156,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "import pv_vision.model.classifier.result_analysis as analysis\n",
+    "import pv_vision.defective_cell_detection.metric_analysis as analysis\n",
     "import pickle\n",
     "from sklearn import preprocessing"
    ],
