Update cnn train val package and tutorial

--- a/tutorials/resnet_train_inference.ipynb
+++ b/tutorials/resnet_train_inference.ipynb
@@ -155,7 +155,7 @@
     "lr_scheduler = optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.1)\n",
     "\n",
     "# train\n",
-    "model_fit_wts, loss_acc = cnn.train_model(model, criterion, optimizer, lr_scheduler, num_epochs=20)\n",
+    "model_fit_wts, loss_acc = cnn.train_model(model, trainloader, valloader, solar_train, solar_val, criterion, optimizer, lr_scheduler, device, num_epochs=20)\n",
     "\n",
     "model_path = Path('cnn')\n",
     "os.makedirs(model_path, exist_ok=True)\n",
@@ -196,8 +196,37 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "# Build predloader. \n",
+    "# When applying the model to new dataset, the labels are unknown.\n",
+    "solar_test = cnn.PredDataset(images_test, transform=solar_transform_val)\n",
+    "\n",
+    "predloader = DataLoader(solar_test, batch_size=128, shuffle=False)   "
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
     "# make prediction\n",
-    "pred_test, prob_test = cnn.predict_test(testloader, model_fit, device)"
+    "pred_test, prob_test = cnn.predict_test(predloader, model_fit, device)"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# save the prediction\n",
+    "le = LabelEncoder()\n",
+    "le.fit(['crack', 'intact', 'intra', 'oxygen', 'solder'])\n",
+    "\n",
+    "with open(Path('cnn')/'results'/'resnet18_predicted.pkl', 'wb') as f:\n",
+    "    pickle.dump({'name': np.array(names_test), \n",
+    "                'defects_pred': le.inverse_transform(pred_test),\n",
+    "                'y_pred': np.array(pred_test)}, f)"
    ],
    "outputs": [],
    "metadata": {}
