Upload position distribution, bbox rotation,  collect YOLO defects
also change metrics_analysis into result_analysis

--- a/tutorials/rf_train_inference.ipynb
+++ b/tutorials/rf_train_inference.ipynb
@@ -156,7 +156,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "import pv_vision.defective_cell_detection.metric_analysis as analysis\n",
+    "import pv_vision.defective_cell_detection.result_analysis as analysis\n",
     "import pickle\n",
     "from sklearn import preprocessing"
    ],
