--- a/tutorials/transform_seg.ipynb
+++ b/tutorials/transform_seg.ipynb
@@ -353,7 +353,7 @@
    "source": [
     "# do perspective transform on all the images and store in \"examples/object_detection/transformed_img\". \n",
     "# Failures are stored in \"examples/object_detection/failed_img\"\n",
-    "# here we use combination of transform v1 and v2. Check code document for more details\n",
+    "# here we use combination of transform line method and contour method. Check code document for more details\n",
     "\n",
     "os.makedirs(example_dir/'object_detection'/'transformed_img', exist_ok=True)\n",
     "os.makedirs(example_dir/'object_detection'/'failed_img', exist_ok=True)\n",
@@ -565,17 +565,7 @@
     "        image = cv.imread(str(transformed_dir/img_file), cv.IMREAD_GRAYSCALE)\n",
     "        transformed_module = TransformedModule(image, 8, 16)\n",
     "        ann_path =  example_dir/'object_detection'/'yolo_manual_ann'/(img_file + '.json') # manually annotated\n",
-    "\n",
-    "        \"\"\"\n",
-    "        splits_inx_x, edgelist_x = seg.detect_edge(image, peaks_on=0)\n",
-    "        abs_x = seg.linear_regression(splits_inx_x, edgelist_x)\n",
-    "        splits_inx_y, edgelist_y = seg.detect_edge(image, peaks_on=1)\n",
-    "        abs_y = seg.linear_regression(splits_inx_y, edgelist_y)\n",
-    "\n",
-    "        abs_x_couple = seg.couple_edges(abs_x, length=600)\n",
-    "        abs_y_couple = seg.couple_edges(abs_y, length=300)\n",
-    "        \"\"\"\n",
-    "\n",
+    "        \n",
     "        single_cells = transformed_module.crop_cell()\n",
     "        if len(single_cells) != 128:\n",
     "            N += 1\n",
