--- a/tutorials/yolo_analysis.ipynb
+++ b/tutorials/yolo_analysis.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os\n",
     "from pathlib import Path\n",
@@ -11,20 +13,20 @@
     "import seaborn as sns\n",
     "\n",
     "import pv_vision.defective_cell_detection.result_analysis as analysis"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "# Get labels from YOLO prediciton"
-   ],
-   "metadata": {}
+    "# Get labels from YOLO annotations"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# collect the true labels in the training set\n",
     "train_dir = Path('grayscale_train/train')\n",
@@ -40,7 +42,7 @@
     "train_cells_info = {\n",
     "    'module_name': [],\n",
     "    'index': [],\n",
-    "    'defects_true': [],\n",
+    "    'labels_true': [],\n",
     "    'x': [],\n",
     "    'y': [],\n",
     "}\n",
@@ -52,23 +54,23 @@
     "\n",
     "train_cells_info = pd.DataFrame(train_cells_info)\n",
     "train_cells_info.head()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# check the distribution of each class \n",
-    "train_cells_info.groupby('defects').size()"
-   ],
-   "outputs": [],
-   "metadata": {}
+    "train_cells_info.groupby('labels_true').size()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# sometimes people just want to get the information of defects (exclude intact)\n",
     "\n",
@@ -77,22 +79,21 @@
     "    'index': [],\n",
     "    'defects': [],\n",
     "    'x': [],\n",
-    "    'y': [],\n",
-    "    'confidence': []\n",
+    "    'y': []\n",
     "}\n",
     "\n",
     "for ann_file in tqdm(train_anns):\n",
-    "    defects_info = analysis.collect_defects(train_dir/ann_file, defects_info, label2defect)\n",
+    "    defects_info = analysis.collect_defects(train_dir/\"ann\"/ann_file, defects_info, label2defect, mode=0)\n",
     "\n",
     "train_defects = pd.DataFrame(defects_info)\n",
     "train_defects.head()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Sometimes people just want to get the label list to compare prediction and ground truth. \n",
     "# The ground truth and prediction may be stored in separate files\n",
@@ -125,51 +126,58 @@
     "    yolo_pred_y_val += list(analysis.get_label_one_module(yolo_val_dir/ann_file, defects_dic_yolo, fill_label=1))\n",
     "\n",
     "# Further analysis like metric reports can be found in the tutorial of random forest"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# position distribution"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yolo_manual_y_val[:10], yolo_pred_y_val[:10]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# position distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Use defects dataframe to plot the distribution of defects\n",
-    "# here use \"crack\" as an example\n",
+    "# here use \"crack\" as an example, you can also use other defect name\n",
     "\n",
     "train_pv = analysis.plot_heatmap(train_defects, \"crack\", linewidths=0.3, cbar_size=0.8)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
-  "orig_nbformat": 4,
+  "interpreter": {
+   "hash": "f4080700e573899fc63e7d3787ad8d019467046cf1e1a46e1ffb125d1e176d46"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.8.2 64-bit ('pytorch_env': conda)",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python",
-   "version": "3.8.2",
-   "mimetype": "text/x-python",
    "codemirror_mode": {
     "name": "ipython",
     "version": 3
    },
-   "pygments_lexer": "ipython3",
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
    "nbconvert_exporter": "python",
-   "file_extension": ".py"
+   "pygments_lexer": "ipython3",
+   "version": "3.8.12"
   },
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.2 64-bit ('pytorch_env': conda)"
-  },
-  "interpreter": {
-   "hash": "f4080700e573899fc63e7d3787ad8d019467046cf1e1a46e1ffb125d1e176d46"
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
