add nn packages, reorganize the folders

--- a/tutorials/transform_1.ipynb
+++ b/tutorials/transform_1.ipynb
@@ -11,7 +11,8 @@
     "import os\n",
     "from pathlib import Path\n",
     "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt \n",
+    "import matplotlib.pyplot as plt\n",
+    "import sys\n",
     "\n",
     "%matplotlib inline "
    ]
@@ -26,7 +27,7 @@
     "# import pv-vision\n",
     "\n",
     "sys.path.append(\"../../pv-vision\")\n",
-    "from pv_vision.transform_seg.solarmodule import SplitModule"
+    "from pv_vision.transform_crop.solarmodule import SplitModule"
    ]
   },
   {
