Update modelhandler_train and debug modelhandler.py

--- a/tutorials/modelhandler_train.ipynb
+++ b/tutorials/modelhandler_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,8 @@
     "\n",
     "from pathlib import Path\n",
     "from PIL import Image\n",
-    "from imutils.paths import list_images"
+    "from imutils.paths import list_images\n",
+    "import os"
    ]
   },
   {
@@ -42,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +97,7 @@
     "            raise ValueError(\"{}: Image doesn't match with mask\".format(os.path.split(self.image_list[index])[-1]))\n",
     "        image = Image.open(self.image_list[index])\n",
     "        mask = Image.open(self.mask_list[index]).convert('L')\n",
-    "        mask = np.array(mask) - 1 # note that we need to transform the lowest label to 0\n",
+    "        mask = np.array(mask)\n",
     "        mask = Image.fromarray(mask)\n",
     "\n",
     "        image, mask = self.transforms(image, mask)\n",
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,20 +183,354 @@
     "valset = SolarDataset(root, image_folder=\"val/img\", \n",
     "        mask_folder=\"val/ann\", transforms=transformers)\n",
     "\n",
-    "testset = SolarDataset(root, image_folder=\"test/img\", \n",
-    "        mask_folder=\"test/ann\", transforms=transformers)\n"
+    "testset = SolarDataset(root, image_folder=\"testset/img\", \n",
+    "        mask_folder=\"testset/ann\", transforms=transformers)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def DeepLab_pretrained(num_classes):\n",
-    "    deeplab = deeplabv3_resnet50(weights='DEFAULT')\n",
+    "    deeplab = deeplabv3_resnet50(weights=DeepLabV3_ResNet50_Weights.DEFAULT)\n",
     "    deeplab.classifier = DeepLabHead(2048, num_classes)\n",
     "    return deeplab"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "model = DataParallel(DeepLab_pretrained(5))\n",
+    "criterion = CrossEntropyLoss()\n",
+    "optimizer = Adam(model.parameters(), lr=0.01)\n",
+    "lr_scheduler = StepLR(optimizer, step_size=5, gamma=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# initialize modelhandler\n",
+    "# The output is stored in the output folder\n",
+    "modelhandler = ModelHandler(\n",
+    "    model=model,\n",
+    "    model_output='out',\n",
+    "    train_dataset=trainset,\n",
+    "    val_dataset=valset,\n",
+    "    test_dataset=testset,\n",
+    "    batch_size_train=32,\n",
+    "    batch_size_val=32,\n",
+    "    lr_scheduler=lr_scheduler,\n",
+    "    num_epochs=10,\n",
+    "    criterion=criterion,\n",
+    "    optimizer=optimizer,\n",
+    "    device=device,\n",
+    "    save_dir='checkpoints',\n",
+    "    save_name='deeplab.pt'\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:16<00:00,  2.45s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.18it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.4173 (train) | 4.9578 (val)\n",
+      "Epoch 2 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:17<00:00,  2.48s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.1789 (train) | 0.1916 (val)\n",
+      "Epoch 3 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:18<00:00,  2.53s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.15it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.1192 (train) | 0.1170 (val)\n",
+      "Epoch 4 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:19<00:00,  2.57s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.1049 (train) | 0.1077 (val)\n",
+      "Epoch 5 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:19<00:00,  2.57s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0942 (train) | 0.0964 (val)\n",
+      "Epoch 6 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:19<00:00,  2.58s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0882 (train) | 0.0882 (val)\n",
+      "Epoch 7 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:20<00:00,  2.58s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0849 (train) | 0.0861 (val)\n",
+      "Epoch 8 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:19<00:00,  2.58s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0839 (train) | 0.0836 (val)\n",
+      "Epoch 9 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:19<00:00,  2.57s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.13it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0826 (train) | 0.0833 (val)\n",
+      "Epoch 10 / 10\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [01:20<00:00,  2.58s/it]\n",
+      "100%|██████████| 6/6 [00:05<00:00,  1.12it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loss: 0.0800 (train) | 0.0824 (val)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'train': {'loss': [0.4173066987054338,\n",
+       "   0.17885671862604197,\n",
+       "   0.1192198520825233,\n",
+       "   0.1049448441514753,\n",
+       "   0.09418112763161522,\n",
+       "   0.08817903688292444,\n",
+       "   0.0848550075059565,\n",
+       "   0.08386343555072698,\n",
+       "   0.08257343704379144,\n",
+       "   0.07998113717439244]},\n",
+       " 'val': {'loss': [4.957792570424634,\n",
+       "   0.19160857034284015,\n",
+       "   0.11703312431657037,\n",
+       "   0.10774861033572707,\n",
+       "   0.09641222534484642,\n",
+       "   0.08819531077562376,\n",
+       "   0.08607308133396992,\n",
+       "   0.08364118046538774,\n",
+       "   0.08325028124936791,\n",
+       "   0.08244443407585454]}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# train the model. Note that this tutorial only runs 10 epochs. \n",
+    "# It may take longer training iteration in real situation.\n",
+    "modelhandler.train_model()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find the minimum loss in validation, which is the best model\n",
+    "np.argmin(modelhandler.running_record['val']['loss'])+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can load the best model and check its performance on testing set\n",
+    "modelhandler.load_model('checkpoints/epoch_10/deeplab.pt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Testing mode\n",
+      "----------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:05<00:00,  1.34s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set: Average loss: 0.0780\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "_ = modelhandler.test_model()\n",
+    "# Not bad. The testing score is similar to validation score"
    ]
   },
   {
@@ -203,10 +538,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = DeepLab_pretrained(5).to(device)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
