UPDATE tutorial README

--- a/tutorials/transform_contour_rounded.ipynb
+++ b/tutorials/transform_contour_rounded.ipynb
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe13def2a10>"
+       "<matplotlib.image.AxesImage at 0x7fbc5336d510>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -80,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc1d90f006dd443eb08d4135fb4054ba",
+       "model_id": "6b3146ac2678417db4305a5e8d6ee8ac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
        "0.2"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,16 +135,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe12b1807c0>"
+       "<matplotlib.image.AxesImage at 0x7fbc50155d80>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -173,7 +173,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58c0180445694148acc85719ac33f367",
+       "model_id": "16b0ede516164015b9b7964db1e903d0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -211,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe129379e40>"
+       "<matplotlib.image.AxesImage at 0x7fbc54cd9060>"
       ]
      },
      "execution_count": 8,
@@ -237,13 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "132353cd24d645eaab2a9eae60c1c343",
+       "model_id": "782948bd893b4841aba20e6c6da11663",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,7 +251,7 @@
        "interactive(children=(IntText(value=100, description='vl_split_size'), IntText(value=150, description='vl_inte…"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,13 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ef737cd3cae4c2e81ef1183dae187b4",
+       "model_id": "c9ad46d81c53438daf9088ef539885a4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,7 +290,7 @@
        "interactive(children=(IntText(value=100, description='hl_split_size'), IntText(value=150, description='hl_inte…"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,16 +344,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fe127609e70>"
+       "<matplotlib.image.AxesImage at 0x7fbc532fae60>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
